--- a/PolygraphGPT/templates/home.html
+++ b/PolygraphGPT/templates/home.html
@@ -2,6 +2,7 @@
 {% block content %}
 <h1 class="mb-4">Welcome to PolygraphGPT</h1>
 <ul class="list-group">
+  <a href="/chatbot">💬 Try the Troubleshooting Chatbot</a>
   <li class="list-group-item"><a href="/deception-detection">Deception Detection</a></li>
   <li class="list-group-item"><a href="/attribution">Attribution</a></li>
   <li class="list-group-item"><a href="/linguistic-forensics">Linguistic Forensics</a></li>
